<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/section_widget_type">
        <ListPreference
            app:defaultValue="2"
            app:entries="@array/widget_type_entries"
            app:entryValues="@array/widget_type_values"
            app:key="widget_type"
            app:title="@string/display_mode"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/section_theme">
        <ListPreference
            app:defaultValue="0"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/base_theme"
            app:useSimpleSummaryProvider="true" />
        
        <Preference
            app:key="progress_color"
            app:title="@string/progress_fill_color"
            app:summary="@string/color_transparency_summary" />

        <Preference
            app:key="progress_gradient_end_color"
            app:title="@string/progress_gradient_end_color"
            app:summary="@string/gradient_end_summary" />

        <Preference
            app:key="progress_unfilled_color"
            app:title="@string/progress_unfilled_color"
            app:summary="@string/unfilled_color_summary" />

        <Preference
            app:key="background_color"
            app:title="@string/background_color"
            app:summary="@string/background_color_summary" />

        <Preference
            app:key="text_color"
            app:title="@string/text_color"
            app:summary="@string/text_color_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/border_settings">
        <SwitchPreferenceCompat
            app:key="border_enabled"
            app:title="@string/enable_border"
            app:defaultValue="false" />
        
        <androidx.preference.SeekBarPreference
            app:key="border_thickness"
            app:title="@string/border_thickness"
            app:min="1"
            android:max="10"
            app:defaultValue="2"
            app:dependency="border_enabled" />
        
        <Preference
            app:key="border_color"
            app:title="@string/border_color"
            app:summary="@string/change_color_summary"
            app:dependency="border_enabled" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/font_settings">
        <ListPreference
            app:key="font_family"
            app:title="@string/font_family"
            app:entries="@array/font_family_entries"
            app:entryValues="@array/font_family_values"
            app:defaultValue="default"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/section_time">
        <Preference
            app:key="usage_access_status"
            app:title="@string/usage_access_setting_title"
            app:summary="@string/usage_access_setting_summary" />

        <androidx.preference.SeekBarPreference
            app:defaultValue="5"
            app:key="usage_threshold"
            android:max="60"
            app:min="1"
            app:title="@string/label_usage_threshold" />

        <Preference
            app:key="ignore_before"
            app:title="@string/label_ignore_before" />

        <Preference
            app:key="day_end"
            app:title="@string/label_day_end" />

        <Preference
            app:key="manual_start_time"
            app:title="@string/label_manual_start"
            app:summary="@string/manual_start_not_set" />

        <Preference
            app:key="start_day_now"
            app:title="@string/start_day_now"
            app:summary="@string/start_day_now_summary" />

        <Preference
            app:key="clear_manual_start"
            app:title="@string/clear_manual_start"
            app:summary="@string/clear_manual_start_summary" />

        <Preference
            app:key="use_automatic_start"
            app:title="@string/use_automatic_start"
            app:summary="@string/use_automatic_start_summary" />
            
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="is_manual_locked"
            app:title="@string/label_lock_manual" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="checkpoint_category"
        app:title="@string/section_checkpoints">

        <Preference
            app:key="notification_status"
            app:title="@string/notification_status_title" />

        <Preference
            app:key="add_checkpoint"
            app:title="@string/add_checkpoint"
            app:summary="@string/add_checkpoint_summary"
            app:icon="@android:drawable/ic_input_add" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/widget_behavior">
        <ListPreference
            app:key="bar_size"
            app:title="@string/label_bar_size"
            app:entries="@array/bar_size_entries"
            app:entryValues="@array/bar_size_values"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="force_update"
            app:title="@string/refresh_widget_now"
            app:summary="@string/refresh_widget_now_summary" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference
            app:key="reset_defaults"
            app:title="@string/reset_defaults"
            app:summary="@string/reset_defaults_summary"
            app:icon="@android:drawable/ic_menu_revert" />
    </PreferenceCategory>

</PreferenceScreen>
